# virtualrealm

./: .gitignore  .main.cc.swp  .util.h.swp  .virtualrealm.cc.swp  .virtualrealm.h.swp  .ycm_extra_conf.py  CMakeLists.txt  README.md
proto/: CMakeLists.txt  auth.proto  chat.proto  header.proto  login.proto  realmgoer.proto  space.proto  status.proto  subrealm.proto
src/: CMakeLists.txt  die.h  exception.cc  exception.h  formatter.cc  formatter.h  logger.cc  logger.h  main.cc  util.h  version.h  virtualrealm.cc  virtualrealm.h
test/: CMakeLists.txt  SessionPool.cc  test_SessionPool.cc
