cmake_minimum_required (VERSION 2.8.11)
project (VIRTUALREALM)
enable_testing()
#set(BOOST_ROOT /usr/local/boost_1_61_0)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS system thread regex unit_test_framework REQUIRED)
find_package(Protobuf REQUIRED)
set(CURSES_USE_NCURSES TRUE)
find_package(Curses REQUIRED)
include_directories(${Boost_INCLUDE_DIRS} ${CURSES_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
add_subdirectory(proto)
add_subdirectory(src)
add_subdirectory(test)
add_executable(virtualrealm ${EXE_MAIN_SOURCES} $<TARGET_OBJECTS:virtualproto> $<TARGET_OBJECTS:virtualcore>)
target_link_libraries(virtualrealm ${Boost_LIBRARIES} ${CURSES_LIBRARIES} ${PROTOBUF_LIBRARIES})
set_target_properties(virtualrealm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
