file(GLOB EXE_SOURCES ${CMAKE_CURRENT_LIST_DIR} *.cc)
set(EXE_MAIN_SOURCES ${CMAKE_CURRENT_LIST_DIR}/main.cc PARENT_SCOPE)
set(EXE_MAIN_SOURCES ${CMAKE_CURRENT_LIST_DIR}/main.cc)
list(REMOVE_ITEM EXE_SOURCES ${EXE_MAIN_SOURCES})
list(REMOVE_ITEM EXE_SOURCES ${CMAKE_CURRENT_LIST_DIR})
add_library(virtualcore OBJECT ${EXE_SOURCES})
